--- a/resources/js/locales/en/common.json
+++ b/resources/js/locales/en/common.json
@@ -9,7 +9,8 @@
     "deleting": "Deleting...",
     "select": "Select",
     "more": "More",
-    "confirm": "Confirm",
+    "progress": "Progress",
+    "dismiss": "Dismiss",
     "viewAll": "View all",
     "new": "New",
     "saving": "Saving...",
@@ -91,6 +92,7 @@
     "show_advanced": "Show Advanced",
     "hide_advanced": "Hide Advanced",
     "item": "Item",
+    "files": "Files",
     "publications": "Publications",
     "vistas": "Views",
     "clics": "Clicks",
