--- a/resources/js/locales/es/publications.json
+++ b/resources/js/locales/es/publications.json
@@ -8,10 +8,11 @@
       },
       "media": {
         "uploadingPending": "Subiendo Pendiente",
-        "backgroundUpload": "¡Guardado! Los archivos multimedia se están subiendo en segundo plano."
+        "backgroundUpload": "Guardado! Los archivos multimedia se están subiendo en segundo plano."
       },
       "upload": {
-        "uploadingFiles": "Subiendo {{count}} archivo(s)...",
+        "activeTasks": "Archivos y Publicaciones ({{count}})...",
+        "uploadingFiles": "Subiendo archivos ({{count}})...",
         "uploadFailed": "Error al subir",
         "uploadsCompleted": "Cargas Completadas",
         "publishingSocial": "Publicando en redes ({{count}})...",
@@ -28,26 +29,26 @@
         "budget": "Presupuesto",
         "startDate": "Fecha de Inicio",
         "endDate": "Fecha de Fin",
-        "publishDate": "Fecha de Publicación",
+        "publishDate": "Fecha de publicación",
         "publishedOn": "Publicado el",
         "publications": "Publicaciones",
         "scheduledPosts": "Publicaciones Programadas",
         "associatedPublications": "Publicaciones Asociadas",
         "accountMissingTitle": "Cuenta Desconectada",
-        "accountMissingText": "Esta publicación se publicó en una cuenta ({{account}}) que ya no está conectada. Al editarla se creará una nueva versión para tu cuenta actual. ¿Continuar?",
+        "accountMissingText": "Esta publicación se publica en una cuenta ({{account}}) que ya no está conectada. Al editarla se crear una nueva versión para tu cuenta actual. ¿Continuar?",
         "created": "Creado",
-        "lastUpdated": "Última Actualización",
+        "lastUpdated": "ltima Actualizacin",
         "selectSocialAccounts": "Seleccionar Cuentas",
-        "lockedBySession": "Bloqueado por Sesión",
+        "lockedBySession": "Bloqueado por sesión",
         "dragDrop": {
           "title": "Arrastra y suelta para ordenar",
           "subtitle": "Sube tus archivos multimedia aquí"
         },
         "placeholders": {
-          "title": "Título",
-          "description": "Descripción",
+          "title": "título",
+          "description": "descripción",
           "hashtags": "Hashtags",
-          "schedulePublication": "Programar Publicación",
+          "schedulePublication": "Programar publicación",
           "goal": "Objetivo",
           "startDate": "12/12/2025",
           "endDate": "12/12/2026"
@@ -58,7 +59,7 @@
         },
         "contentLocked": "Contenido Bloqueado",
         "contentLockedHint": "Para editar el contenido (título, descripción o archivos), debes despublicar la publicación de todas las plataformas.",
-        "lockedByOther": "Publicación bloqueada por otro usuario",
+        "lockedByOther": "publicación bloqueada por otro usuario",
         "locking": {
           "sessionMessage": "Tienes esta publicación abierta en <1>{{browser}}</1>. Cierra la otra sesión para editar aquí.",
           "userMessage": "{{user}} está editando esta publicación <1>desde {{browser}}</1>. Tus cambios no podrán ser guardados para evitar conflictos."
@@ -72,22 +73,22 @@
         "useGlobal": "Programación Global"
       },
       "add": {
-        "title": "Agregar Publicación",
-        "titleField": "Título",
+        "title": "Agregar publicación",
+        "titleField": "título",
         "subtitle": "Crear una publicación",
         "name": "Nombre",
-        "description": "Descripción",
+        "description": "descripción",
         "image": "Imagen",
         "hashtags": "Hashtags",
         "campaigns": "Campañas",
-        "schedulePublication": "Programar Publicación",
+        "schedulePublication": "Programar publicación",
         "scheduled_at": "Fecha Programada",
         "goal": "Objetivo",
         "status": "Estado",
         "budget": "Presupuesto",
         "startDate": "Fecha de Inicio",
         "endDate": "Fecha de Fin",
-        "publishDate": "Fecha de Publicación",
+        "publishDate": "Fecha de publicación",
         "publishedOn": "Publicado el",
         "publications": "Publicaciones",
         "creating": "Creando",
@@ -98,10 +99,10 @@
           "subtitle": "Sube tus archivos multimedia aquí"
         },
         "placeholders": {
-          "title": "Título",
-          "description": "Descripción",
-          "hashtags": "#marketing #publicidad #comunicación",
-          "schedulePublication": "Programar Publicación",
+          "title": "título",
+          "description": "descripción",
+          "hashtags": "#marketing #publicidad #comuúnicacin",
+          "schedulePublication": "Programar publicación",
           "goal": "Objetivo",
           "startDate": "12/12/2025",
           "endDate": "12/12/2026"
@@ -112,12 +113,12 @@
         }
       },
       "edit": {
-        "title": "Editar Publicación",
-        "titleField": "Título",
+        "title": "Editar publicación",
+        "titleField": "título",
         "subtitle": "Actualizar la publicación existente",
-        "description": "Descripción",
+        "description": "descripción",
         "hashtags": "Hashtags",
-        "schedulePublication": "Programar Publicación",
+        "schedulePublication": "Programar publicación",
         "addCampaign": "Agregar Campaña",
         "editCampaign": "Editar Campaña",
         "deleteCampaign": "Eliminar Campaña",
@@ -130,22 +131,22 @@
         "budget": "Presupuesto",
         "startDate": "Fecha de Inicio",
         "endDate": "Fecha de Fin",
-        "publishDate": "Fecha de Publicación",
+        "publishDate": "Fecha de publicación",
         "publishedOn": "Publicado el",
         "associatedPublications": "Publicaciones Asociadas",
         "accountMissingTitle": "Cuenta Desconectada",
-        "accountMissingText": "Esta publicación se publicó en una cuenta ({{account}}) que ya no está conectada. Al editarla se creará una nueva versión para tu cuenta actual. ¿Continuar?",
+        "accountMissingText": "Esta publicación se public en una cuenta ({{account}}) que ya no está conectada. Al editarla se crear una nueva versión para tu cuenta actual. ¿Continuar?",
         "selectSocialAccounts": "Seleccionar Cuentas",
-        "lockedBySession": "Bloqueado por Sesión",
+        "lockedBySession": "Bloqueado por sesión",
         "dragDrop": {
           "title": "Arrastra y suelta para ordenar",
           "subtitle": "Sube tus archivos multimedia aquí"
         },
         "placeholders": {
           "title": "Arrastra y suelta para ordenar",
-          "description": "Descripción",
+          "description": "descripción",
           "hashtags": "Hashtags",
-          "schedulePublication": "Programar Publicación",
+          "schedulePublication": "Programar publicación",
           "goal": "Objetivo",
           "startDate": "12/12/2025",
           "endDate": "12/12/2026"
@@ -154,12 +155,12 @@
           "save": "Actualizar",
           "cancel": "Cancelar"
         },
-        "configurationLocked": "Configuración Bloqueada",
-        "configurationLockedHint": "Necesitas aprobación para configurar las redes y la programación. Solicita una revisión primero.",
+        "configurationLocked": "Configuracin Bloqueada",
+        "configurationLockedHint": "Necesitas aprobación para configurar las redes y la Programación. Solicita una revisión primero.",
         "configurationLockedHintAdmin": "Debes aprobar la publicación antes de configurar las redes.",
         "contentLocked": "Contenido Bloqueado",
         "contentLockedHint": "Para editar el contenido (título, descripción o archivos), debes despublicar la publicación de todas las plataformas.",
-        "lockedByOther": "Publicación bloqueada por otro usuario",
+        "lockedByOther": "publicación bloqueada por otro usuario",
         "locking": {
           "sessionMessage": "Tienes esta publicación abierta en <1>{{browser}}</1>. Cierra la otra sesión para editar aquí.",
           "userMessage": "{{user}} está editando esta publicación <1>desde {{browser}}</1>. Tus cambios no podrán ser guardados para evitar conflictos."
@@ -167,25 +168,25 @@
       },
       "approvals": {
         "noPending": "Sin aprobaciones pendientes",
-        "noPendingDesc": "¡Genial! Todas las publicaciones están al día.",
+        "noPendingDesc": "¡Genial! Todas las publicaciones están al da.",
         "approve": "Aprobar",
-        "approvedSuccess": "Publicación aprobada con éxito",
+        "approvedSuccess": "publicación aprobada con éxito",
         "title": "Aprobaciones",
         "historyTitle": "Historial de Aprobaciones",
         "historySubtitle": "Registros de estados y revisiones",
         "date": "Fecha",
         "user": "Usuario",
-        "publication": "Publicación",
+        "publication": "publicación",
         "actions": "Acciones"
       },
       "comments": {
         "title": "Comentarios Internos",
         "placeholder": "Escribe un comentario...",
-        "noComments": "No hay comentarios aún. ¡Inicia la conversación!",
+        "noComments": "No hay comentarios aún. ¡Inicia la conversacin!",
         "loading": "Cargando comentarios...",
         "deleteConfirm": "¿Estás seguro de que quieres eliminar este comentario?",
         "deleteConfirmTitle": "Eliminar Comentario",
-        "deleteConfirmMessage": "¿Estás seguro de que deseas eliminar este comentario? Esta acción no se puede deshacer.",
+        "deleteConfirmMessage": "¿Estás seguro de que deseas eliminar este comentario? Esta accin no se puede deshacer.",
         "deleteSuccess": "Comentario eliminado",
         "deleteError": "Error al eliminar el comentario",
         "postError": "Error al publicar el comentario",
@@ -219,15 +220,15 @@
         },
         "modal": {
           "title": "Despublicar",
-          "message": "¿Estás seguro de despublicar? Esto eliminará la publicación de esta plataforma.",
+          "message": "¿Estás seguro de despublicar? Esto eliminar la publicación de esta plataforma.",
           "confirmText": "Despublicar",
           "cancelText": "Cancelar",
           "unpublishing": "Despublicando..."
         },
         "button": {
           "publish": "Publicar",
-          "requestApproval": "Solicitar Aprobación",
-          "pendingReview": "Pendiente de Revisión",
+          "requestApproval": "Solicitar aprobación",
+          "pendingReview": "Pendiente de revisión",
           "approve": "Aprobar",
           "reject": "Rechazar",
           "cancel": "Cancelar",
@@ -235,7 +236,7 @@
           "preview": "Vista Previa"
         },
         "pendingReviewBanner": {
-          "title": "Publicación en Revisión",
+          "title": "publicación en revisión",
           "message": "Esta publicación ya ha sido enviada para revisión. Un administrador debe aprobarla antes de que pueda ser publicada."
         },
         "videoSplitter": "Herramienta de Recorte de Video",
@@ -245,14 +246,14 @@
         "splitSuccess": "Video recortado con éxito",
         "editVideo": "Editar Video",
         "rejectedBanner": {
-          "title": "Publicación Rechazada",
+          "title": "publicación Rechazada",
           "message": "Esta publicación ha sido rechazada por {{name}}.",
           "footer": "Realiza los ajustes necesarios y vuelve a solicitar revisión para continuar."
         }
       },
       "preview": {
         "title": "Vistas Previas en Vivo",
-        "disclaimer": "La vista previa es una aproximación. El aspecto real puede variar según la plataforma.",
+        "disclaimer": "La vista previa es una aproximacin. El aspecto real puede variar segn la plataforma.",
         "simulated": "Simulado",
         "real": "Real",
         "realInfo": "Vista Previa Real",
@@ -260,64 +261,64 @@
         "notAvailable": "Vista previa no disponible para esta plataforma"
       },
       "validation": {
-        "descMin": "Descripción debe tener al menos 10 caracteres",
-        "descMax": "Descripción debe tener menos de 200 caracteres",
+        "descMin": "descripción debe tener al menos 10 caracteres",
+        "descMax": "descripción debe tener menos de 200 caracteres",
         "objMin": "Objetivo debe tener al menos 5 caracteres",
         "objMax": "Objetivo debe tener menos de 200 caracteres",
         "objRequired": "Objetivo es requerido",
-        "descRequired": "Descripción es requerida",
-        "titleRequired": "Título es requerido",
-        "titleLength": "Título debe tener menos de 70 caracteres",
+        "descRequired": "descripción es requerida",
+        "titleRequired": "título es requerido",
+        "titleLength": "título debe tener menos de 70 caracteres",
         "nameRequired": "Nombre es requerido",
         "goalRequired": "Objetivo es requerido",
         "statusRequired": "Estado es requerido",
         "budgetRequired": "Presupuesto es requerido",
         "startDateRequired": "Fecha de Inicio es requerida",
         "endDateRequired": "Fecha de Fin es requerida",
-        "publishDateRequired": "Fecha de Publicación es requerida",
+        "publishDateRequired": "Fecha de publicación es requerida",
         "publishedOnRequired": "Publicado el es requerido",
         "associatedPublicationsRequired": "Publicaciones Asociadas es requerida",
-        "descriptionRequired": "Descripción es requerida",
+        "descriptionRequired": "descripción es requerida",
         "hashtagsRequired": "Hashtags es requerido",
-        "schedulePublicationRequired": "Programar Publicación es requerido",
+        "schedulePublicationRequired": "Programar publicación es requerido",
         "nameLength": "Nombre debe tener al menos 10 caracteres",
-        "descriptionLength": "Descripción debe tener al menos 10 caracteres",
+        "descriptionLength": "descripción debe tener al menos 10 caracteres",
         "hashtagsLength": "Hashtags debe tener al menos 10 caracteres",
-        "schedulePublicationLength": "Programar Publicación debe tener al menos 10 caracteres",
+        "schedulePublicationLength": "Programar publicación debe tener al menos 10 caracteres",
         "imageRequired": "Imagen es requerida",
         "hashtagValid": "Hashtag debe tener al menos 10 caracteres",
         "hashtagMax": "Hashtag debe tener menos de 10 caracteres",
-        "scheduleDateRequired": "Por favor, selecciona una fecha para programar la publicación o desmarca la opción de programar",
+        "scheduleDateRequired": "Por favor, selecciona una fecha para programar la publicación o desmarca la opcin de programar",
         "scheduleRequired": "Debes programar una fecha para todas las redes seleccionadas o establecer una fecha global.",
         "scheduledAtRequired": "La fecha programada es requerida cuando seleccionas redes sociales",
         "socialAccountsRequired": "Por favor, selecciona al menos una red social",
         "allSchedulesRequired": "Todas las redes deben tener una fecha o activa la fecha global",
         "singleVideo": "Solo puedes subir un video por publicación.",
-        "scheduledMinDifference": "La fecha debe ser al menos 5 minutos después de la actual",
-        "videoTooLong": "Video demasiado largo para {{platform}} (máx {{max}})",
-        "videoComplies": "Cumple con la duración para {{platform}}",
-        "durationErrors": "Por favor, corrige los errores de duración antes de guardar."
+        "scheduledMinDifference": "La fecha debe ser al menos 2 minutos después de la actual",
+        "videoTooLong": "Video demasiado largo para {{platform}} (mx {{max}})",
+        "videoComplies": "Cumple con la duracin para {{platform}}",
+        "durationErrors": "Por favor, corrige los errores de duracin antes de guardar."
       },
       "cancel_confirmation": {
-        "title": "Cancelar Publicación",
-        "message": "¿Estás seguro de que deseas cancelar esta publicación? El envío a redes se detendrá.",
-        "confirm": "Sí, cancelar",
+        "title": "Cancelar publicación",
+        "message": "¿Estás seguro de que deseas cancelar esta publicación? El envo a redes se detendr.",
+        "confirm": "S, cancelar",
         "cancel": "No, continuar"
       }
     },
     "status": {
       "draft": "Borrador",
+      "pending_review": "Pendiente de revisión",      
+      "failed": "Fallidas",
       "publishing": "Publicando",
       "published": "Publicado",
       "publis": "Publicado",
       "scheduled": "Programado",
-      "failed": "Fallido",
-      "pending_review": "En Revisión",
       "approved": "Aprobado",
-      "instant": "Instantáneo",
+      "instant": "Instantneo",
       "rejected": "Rechazado",
       "deleted": "Eliminado",
-      "progress": "Progreso de Publicación",
+      "progress": "Progreso de publicación",
       "current": "Actual",
       "completed": "Completado",
       "processing": "Procesando"
@@ -332,7 +333,7 @@
     },
     "table": {
       "name": "Nombre",
-      "description": "Descripción",
+      "description": "descripción",
       "publications": "Publicaciones",
       "media": "Archivos",
       "campaign": "Campaña",
@@ -346,7 +347,7 @@
       "emptyState": {
         "title": "No se encontraron publicaciones",
         "description": "Crea una publicación para comenzar a publicar contenido.",
-        "button": "Agregar Publicación"
+        "button": "Agregar publicación"
       },
       "lockedBy": "Bloqueado por:",
       "publishingBy": "Publicando por",
@@ -357,21 +358,21 @@
       "rejectedBy": "Rechazado por"
     },
     "messages": {
-      "addSuccess": "¡Publicación agregada exitosamente!",
-      "createSuccess": "¡Publicación creada exitosamente!",
-      "duplicateSuccess": "¡Publicación duplicada con éxito!",
+      "addSuccess": "publicación agregada eéxitosamente!",
+      "createSuccess": "publicación creada eéxitosamente!",
+      "duplicateSuccess": "publicación duplicada con éxito!",
       "addError": "Error al agregar publicación",
-      "updateSuccess": "¡Publicación actualizada exitosamente!",
+      "updateSuccess": "publicación actualizada eéxitosamente!",
       "updateError": "Error al actualizar publicación",
       "mediaAttached": "Archivo multimedia adjuntado con éxito a '{{title}}' (Carga en segundo plano)",
-      "deleteSuccess": "¡Publicación eliminada exitosamente!",
+      "deleteSuccess": "publicación eliminada eéxitosamente!",
       "deleteError": "Error al eliminar publicación",
-      "fetchError": "Error al cargar campañas",
+      "fetchError": "Error al cargar Campañas",
       "error": "Ha ocurrido un error inesperado",
       "confirmDelete": {
         "title": "¿Estás seguro?",
-        "text": "¡No podrás recuperar esta campaña!",
-        "confirmButton": "Sí, eliminarla!",
+        "text": "No podrs recuperar esta Campaña!",
+        "confirmButton": "S, eliminarla!",
         "cancelButton": "Cancelar"
       }
     },
@@ -387,7 +388,7 @@
     },
     "headers": {
       "status": "Estado",
-      "duration": "Duración",
+      "duration": "Duracin",
       "mediaFiles": "Archivos",
       "actions": "Acciones"
     },
@@ -395,7 +396,12 @@
       "title": "Filtros de publicación",
       "all": "Todo",
       "published": "Publicadas",
-      "draft": "Borrador"
+      "draft": "Borrador",
+      "approved": "Aprobadas",      
+      "scheduled": "Programadas",    
+      "pending_review": "Pendiente de revisión",
+      "rejected": "Rechazadas",    
+      "failed": "Fallidas"
     },
     "gallery": {
       "sendingToSocial": "Enviando a plataformas sociales...",
