--- a/resources/js/locales/en/common.json
+++ b/resources/js/locales/en/common.json
@@ -66,7 +66,7 @@
     "save_changes": "Save Changes",
     "noCreditCard": "No credit card required",
     "unknown": "Unknown",
-    "platform": "Platform",
+    "platformConnect": "Platform",
     "close": "Close",
     "copy": "Copy",
     "created": "Created",
@@ -115,6 +115,9 @@
       "oldest": "Oldest",
       "title_asc": "Title (A-Z)",
       "title_desc": "Title (Z-A)"
+    },
+    "platform":{
+      "title": "All platforms"
     },
     "errors": {
       "checkFormErrors": "Please check the errors in the form",
