--- a/resources/js/locales/es/common.json
+++ b/resources/js/locales/es/common.json
@@ -120,7 +120,7 @@
       "title_desc": "Título (Z-A)"
     },
     "platform":{
-      "title": "Todas la plataformas"
+      "title": "Ninguna plataforma"
     },
     "errors": {
       "checkFormErrors": "Por favor, revisa los errores en el formulario",
