i18n: update translations and validation schemas for EN and ES locales

--- a/resources/js/locales/en/activity.json
+++ b/resources/js/locales/en/activity.json
@@ -19,7 +19,9 @@
         "rejected": "Rejected",
         "publishing": "Publishing...",
         "failed_on_platform": "Failed on platform",
+        "failed_on_platform_detail": "Failed on {{platform}}",
         "published_on_platform": "Published on platform",
+        "published_on_platform_detail": "Published on {{platform}}",
         "statusChanged": "Status changed",
         "pending": "Pending",
         "scheduled": "Scheduled",
